--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "nodemailer-smtp-transport",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "SMTP transport for Nodemailer",
-  "main": "lib/smtp-transport.js",
+  "main": "src/smtp-transport.js",
   "scripts": {
     "test": "grunt"
   },
