--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nodemailer-smtp-transport",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "SMTP transport for Nodemailer",
   "main": "src/smtp-transport.js",
   "scripts": {
@@ -21,8 +21,8 @@
   },
   "homepage": "http://github.com/andris9/nodemailer-smtp-transport",
   "dependencies": {
-    "smtp-connection": "^0.1.3",
-    "nodemailer-wellknown": "^0.1.0"
+    "nodemailer-wellknown": "^0.1.0",
+    "smtp-connection": "^0.1.4"
   },
   "devDependencies": {
     "chai": "~1.8.1",
