--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "smtp-connection": "^1.2.0"
   },
   "devDependencies": {
-    "chai": "~2.1.1",
-    "grunt": "~0.4.5",
-    "grunt-contrib-jshint": "~0.11.0",
-    "grunt-mocha-test": "~0.12.7",
+    "chai": "^2.1.1",
+    "grunt": "^0.4.5",
+    "grunt-contrib-jshint": "^0.11.0",
+    "grunt-mocha-test": "^0.12.7",
     "sinon": "^1.13.0",
-    "simplesmtp": "^0.3.35"
+    "smtp-server": "^1.1.0"
   }
 }
