--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "nodemailer-smtp-transport",
-  "version": "1.1.0",
+  "version": "2.0.0-beta.0",
   "description": "SMTP transport for Nodemailer",
-  "main": "src/smtp-transport.js",
+  "main": "lib/smtp-transport.js",
   "scripts": {
     "test": "grunt"
   },
@@ -22,13 +22,14 @@
   "homepage": "http://github.com/andris9/nodemailer-smtp-transport",
   "dependencies": {
     "clone": "^1.0.2",
+    "nodemailer-shared": "^1.0.0",
     "nodemailer-wellknown": "^0.1.7",
-    "smtp-connection": "^1.3.7"
+    "smtp-connection": "beta"
   },
   "devDependencies": {
     "chai": "^3.4.1",
     "grunt": "^0.4.5",
-    "grunt-contrib-jshint": "^0.11.3",
+    "grunt-eslint": "^17.3.1",
     "grunt-mocha-test": "^0.12.7",
     "mocha": "^2.3.4",
     "sinon": "^1.17.2",
