--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nodemailer-smtp-transport",
-  "version": "2.0.0-beta.1",
+  "version": "2.0.0",
   "description": "SMTP transport for Nodemailer",
   "main": "lib/smtp-transport.js",
   "scripts": {
@@ -21,10 +21,10 @@
   },
   "homepage": "http://github.com/andris9/nodemailer-smtp-transport",
   "dependencies": {
-    "clone": "^1.0.2",
-    "nodemailer-shared": "^1.0.1",
-    "nodemailer-wellknown": "^0.1.7",
-    "smtp-connection": "beta"
+    "clone": "1.0.2",
+    "nodemailer-shared": "1.0.2",
+    "nodemailer-wellknown": "0.1.7",
+    "smtp-connection": "2.0.0"
   },
   "devDependencies": {
     "chai": "^3.4.1",
