--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "SMTP transport for Nodemailer",
   "main": "lib/smtp-transport.js",
   "scripts": {
-    "test": "grunt"
+    "test": "grunt mochaTest"
   },
   "repository": {
     "type": "git",
